Made changes to HTML to reflect new score line ups for VS mode. Made changes to JS files to create additional enemy ships for Level 2 for VS Mode. Duplicate ships will now chase player 2. Not done yet, first round of coding.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                 <h3 id="endOutput1" class="white"></h3>
             </div>
             <div>
-				<h3>Practice Level 1 Final Score <span id="score1" class="white"></span></h3>
+				<h3>Practice Level 1 Final Score</h3>
+                <h4>Player 1:  <span id="scoreL1_1" class="white"></span></h4>
+                <h4>Player 2:  <span id="scoreL1_2" class="white"></span> - Only Applies in 2P VS. Mode</h4>
 				<h3>Game - LEVEL 2</h3>
 				<ol class="white">
 	                <li>
@@ -125,7 +127,9 @@
                 <h3>Game Over. Hope you had fun.</h3>
             </div>
 			<div>
-				<h3>Level 2 Final Score <span id="score2" class="white"></span></h3>
+				<h3>Level 2 Final Score</h3>
+                <h4>Player 1:  <span id="scoreL2_1" class="white"></span></h4>
+                <h4>Player 2:  <span id="scoreL2_2" class="white"></span> - Only Applies in 2P VS. Mode</h4>
 			</div>
             <div>
                 <h3>Click on the button below if you wish to play again. Choose which Level below.</h3>
