Modified logic to display correct winner no mater the score. Changed game keys to not use special keys, i.e. space, alt, ctrl, and such. Updated HTML to reflect changes.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 						<span class="gold">UP</span> key controls Forward thrust.
 					</li>
 					<li>
-						<span class="gold">CTRL</span> or '<span class="gold">,</span>' key controls Missile Fire.
+						'<span class="gold">.</span>' or <span class="gold">M</span> key controls Missile Fire. <span class="gold">NUMPAD 1</span> & <span class="gold">3</span> can be used too for those with a NUMPAD.
 					</li>
                     <li>
                         <span class="red">RED</span> Galaga ship similar to the Golden Star Power Up can be captured and used as additional FirePower. Careful though, firing upon the ship will destroy it. Optional configuration of how Ship 2 is played is in the Administration Panel.
                     </li>
                     <li>
-						Warp Capability - Press <span class="gold">M</span>, '<span class="gold">.</span>', or <span class="gold">DOWN</span> key - Randomly disappear and reappear on another part of the screen. But watch out, you could warp into another object causing damage. Use at your own Risk.
+						Warp Capability - Press '<span class="gold">,</span>', or <span class="gold">DOWN</span> key - Randomly disappear and reappear on another part of the screen. But watch out, you could warp into another object causing damage. Use at your own Risk. <span class="gold">NUMPAD 2</span> can be used too for those with a NUMPAD.
 					</li>
 				</ol>
                 <h3 class="white">Notes</h3>
@@ -65,7 +65,7 @@
                             <input id="1P" type="radio" name="GameMode" checked />
                             <p>1 Player Mode </p><br>
                             <input id="2P" type="radio" name="GameMode" />
-                            <p>2 Player VS. Mode (<span class="gold">A</span>, <span class="gold">W</span>, & <span class="gold">D</span> Key control Ship 2. <span class="gold">SPACE</span> & <span class="gold">C</span> Key Fire. <span class="gold">ALT</span> & <span class="gold">S</span> Key Warp) </p>
+                            <p>2 Player VS. Mode (<span class="gold">A</span>, <span class="gold">W</span>, & <span class="gold">D</span> Key control Ship 2. <span class="gold">B</span> & <span class="gold">C</span> Key Fire. <span class="gold">V</span> & <span class="gold">S</span> Key Warp) </p>
 
                         </div>
                     </fieldset>
