Modified settings of HP in VS Mode for Admin Panel. Modified CSS for settings panel display.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>
-                        Game Difficulty Settings
+                        Game Difficulty Settings - Applies to VS Mode Too!
                     </legend>
                     <div>
                         <p>Max # of Asteroids (Random upto Max): </p>
@@ -198,11 +198,11 @@
                         <input id="maxEnemySpeed" type="number" placeholder="Enter Max #" value="2" />
                     </div>
                     <div>
-                        <p>Player Hit Points: </p>
+                        <p>Player HP (Recommend 20+ for VS Mode): </p>
                         <input id="hitPointPlayer" type="number" placeholder="Enter Hit Points" value="10" />
                     </div>
                     <div>
-                        <p>Enemy Hit Points: </p>
+                        <p>Enemy HP: </p>
                         <input id="hitPointEnemy" type="number" placeholder="Enter Hit Points" value="3" />
                     </div>
                 </fieldset>
