Fixed typo on main page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </ol>
             </div>
             <div class="white">
-                <h3>New 2 Player VS Mode Added. Battle your friends. Show whose the BOSS.</h3>
+                <h3>New 2 Player VS Mode Added. Battle your friends. Show Who's the Boss.</h3>
                 <form>
                     <fieldset>
                         <legend class="gold">
