All Copy JS files are recopied from main repo. A lot of modifications done since last commit. Primary game JS are now all in scene.js. More code optimization to streamline

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Final Project - Crafty JS</title>
+    <title>Galaga by Gabe</title>
+    <link rel="shortcut icon" type="_images/png" href="_images/favicon.png"/>
 	<!--    FontAwesome-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Latest compiled and minified CSS -->
