Fixed typos in HTML. Updated email address to current

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         		<h1>Galaga Derby</h1>
         	</header>
             <div class="">
-                <h3>You player character is the Galaga Ship. Your objective in stage one is to clear all Asteriods. Golden Star's are Power UP's. It will add additional hit points to your ship. Careful though, firing upon the star will destroy it.</h3>
+                <h3>Your player character is the Galaga Ship. Your objective in stage one is to clear out all Asteriods. Golden Star's are Power UP's. It will add additional hit points to your ship. Careful though, firing upon the star will destroy it.</h3>
 				<h3>Game Controls</h3>
 				<ol class="white">
 					<li>
@@ -80,7 +80,7 @@
                 <!-- <input id="btnStart2P" type="button" value="START 2P" class="btn btn-danger splashButton" /> -->
             </p>
             <!--	Footer Copyright-->
-            <footer class="white">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
+            <footer class="white">Copyright Gabe &copy; 2017 - Gabe@w3dev.io</footer>
         </div>
         <!-- Splash Screen for Level Change -->
         <div id="splashLevel" class="splash gold">
@@ -112,7 +112,7 @@
                 <input id="btnNewLevel" type="button" value="Start Game Level 2"  class="btn btn-danger splashButton" />
             </p>
 			<!--	Footer Copyright-->
-            <footer class="white">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
+            <footer class="white">Copyright Gabe &copy; 2017 - Gabe@w3dev.io</footer>
         </div>
         <div id="splashEnd" class="splash gold">
 			<p class="red">
@@ -141,7 +141,7 @@
             </p>
 
 			<!--	Footer Copyright-->
-            <footer class="white">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</footer>
+            <footer class="white">Copyright Gabe &copy; 2017 - Gabe@w3dev.io</footer>
         </div>
         <div id="openSettings" class="white">
             <form class="black">
@@ -235,7 +235,7 @@
 	<!--	Footer Copyright-->
 	<footer class="">
 	    <div class="">
-	        <div class="">Copyright Gabe &copy; 2017 - W3Dev@yahoo.com</div>
+	        <div class="">Copyright Gabe &copy; 2017 - Gabe@w3dev.io</div>
 	    </div>
 	</footer>
 	<!-- <div class="">
