--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="styleSheet" type="text/css" href="_css/master.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-	<script src="_lib/crafty.js"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+	<script type="text/javascript" src="_lib/crafty.js"></script>
+
 </head>
 <body>
     <!-- <header>
@@ -241,9 +242,9 @@
 	<!-- <div class="">
 		Image to Use: <img id="galaxyBackground" src="_images/galaxy.jpg" alt="Galaxy Background Hidden" />
 	</div> -->
-	<script src="_scripts/scripts.js"></script>
-    <script src="_scripts/components.js"></script>
-    <script src="_scripts/scenes.js"></script>
+	<script type="text/javascript" src="_scripts/scripts.js"></script>
+  <script type="text/javascript" src="_scripts/components.js"></script>
+  <script type="text/javascript" src="_scripts/scenes.js"></script>
 
 </body>
 </html>
