--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Galaga by Gabe</title>
-    <link rel="shortcut icon" type="_images/png" href="_images/favicon.png"/>
+    <link rel="shortcut icon" type="_images/png" href="images/favicon.png"/>
 	<!--    FontAwesome-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="styleSheet" type="text/css" href="_css/master.css">
+    <link rel="styleSheet" type="text/css" href="css/master.css">
     <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-	<script type="text/javascript" src="_lib/crafty.js"></script>
+	<script type="text/javascript" src="lib/crafty.js"></script>
 
 </head>
 <body>
@@ -240,11 +240,11 @@
 	    </div>
 	</footer>
 	<!-- <div class="">
-		Image to Use: <img id="galaxyBackground" src="_images/galaxy.jpg" alt="Galaxy Background Hidden" />
+		Image to Use: <img id="galaxyBackground" src="images/galaxy.jpg" alt="Galaxy Background Hidden" />
 	</div> -->
-	<script type="text/javascript" src="_scripts/scripts.js"></script>
-  <script type="text/javascript" src="_scripts/components.js"></script>
-  <script type="text/javascript" src="_scripts/scenes.js"></script>
+	<script type="text/javascript" src="scripts/scripts.js"></script>
+  <script type="text/javascript" src="scripts/components.js"></script>
+  <script type="text/javascript" src="scripts/scenes.js"></script>
 
 </body>
 </html>
